<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="8dp"
    android:clipChildren="false"
    android:clipToPadding="false">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvHero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="4dp"
        app:cardCornerRadius="12dp"
        app:cardBackgroundColor="@color/secondary_color"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:paddingEnd="32dp"
        android:paddingStart="184dp"> <!-- Padding to avoid overlap with image -->

        <!-- Background Image Overlay -->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Image as Background Overlay -->
            <ImageView
                android:id="@+id/ivHeroBackground"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/bg_texture"
                android:alpha="0.5"/>

            <!-- Content Container -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tvItemTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:maxWidth="200dp"
                    android:lineSpacingExtra="4dp"
                    android:breakStrategy="high_quality"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="16dp"
                    android:text="@string/placeholder_routine_name"
                    android:textColor="@color/neutral_dark_color"
                    android:textFontWeight="600"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvRoutineDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:layout_below="@id/tvItemTitle"
                    android:layout_alignEnd="@id/tvItemTitle"
                    android:layout_marginTop="8dp"
                    android:text="@string/placeholder_routine_date"
                    android:textColor="@color/neutral_dark_color"
                    android:textFontWeight="600"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/btnStartRoutine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvRoutineDate"
                    android:layout_alignEnd="@id/tvRoutineDate"
                    android:layout_marginTop="16dp"
                    android:backgroundTint="@color/accent_color"
                    android:minHeight="48dp"
                    android:text="@string/hero_button_text"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </RelativeLayout>
        </FrameLayout>
    </androidx.cardview.widget.CardView>

    <!-- Hero Image Positioned to the Left -->
    <ImageView
        android:id="@+id/ivHero"
        android:layout_width="176dp"
        android:layout_height="184dp"
        android:elevation="8dp"
        android:translationY="-6dp"
        android:layout_marginStart="8dp"
        android:layout_gravity="start|center_vertical"
        android:scaleType="centerCrop"
        android:src="@drawable/img_neck"
        android:contentDescription="@string/hero_img_desc"/>

</FrameLayout>
